@@ -21,8 +21,11 @@
  */
 ?>
 <?php
+/**
+ * @package Gallery
+ */
 
-$gallery->version = '1.6-RC1-svn-b58';
+$gallery->version = '1.6-RC1-svn-b59';
 $gallery->config_version = 101;
 $gallery->album_version = 41;
 $gallery->user_version = 6;
