@@ -1,3 +1,9 @@
+2007-05-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b59
+
+ * Change: Use <label> for labels before/after input files.
+	   Added css.
+	   Done in gInput()
+
 2007-04-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b58
 
  * New: Navigation via cursor keys. niiiice.
